--- a/etc/NEWS
+++ b/etc/NEWS
@@ -164,8 +164,8 @@ character when doing minibuffer filename prompts.
 
 The variables `term-default-fg-color' and `term-default-bg-color' are
 now deprecated in favor of the `term-face' face, that you can
-customize.  Also, it is now possible to cutomize how are displayed the
-ANSI terminal colors and styles by cutomizing the corresponding
+customize.  Also, it is now possible to customize how are displayed the
+ANSI terminal colors and styles by customizing the corresponding
 `term-color-<COLOR>', `term-color-underline' and `term-color-bold'
 faces.
 
