* lisp/comint.el (comint-output-filter): Filter out repeated prompts.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-02  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* comint.el (comint-output-filter): Filter out repeated prompts.
+
 	* net/ange-ftp.el (ange-ftp-expand-file-name): Use ange-ftp-ftp-name
 	and file-name-absolute-p.
 	(ange-ftp-file-exists-p): Use ange-ftp-file-exists-p for
