--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-02  Glenn Morris  <rgm@gnu.org>
+
+	* simple.el (kill-whole-line): Doc tweak.
+
 2012-07-01  Eli Zaretskii  <eliz@gnu.org>
 
 	* files.el (file-relative-name): Compare file names
