--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-03  Michael Albinus  <michael.albinus@gmx.de>
+
+	* vc/ediff-diff.el (ediff-same-file-contents): Fix it for remote
+	files on the same host.
+
 2012-07-03  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* help-fns.el (describe-function-1): Only call
