Fix compilation with --enable-gcc-warnings and -O1 optimization level. * configure.in: If --enable-gcc-warnings, disable -Wunsafe-loop-optimizations for -O1 optimization level. * src/doprnt.c (doprnt): Change type of tem to int, initialize to avoid compiler warning.  Add eassert. * src/search.c (simple_search): Initialize match_byte to avoid compiler warning.  Add eassert.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-04  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* configure.in: If --enable-gcc-warnings, disable
+	-Wunsafe-loop-optimizations for -O1 optimization level.
+
 2012-06-30  Glenn Morris  <rgm@gnu.org>
 
 	* configure.in (standardlisppath): New output variable.
