--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2012-07-04  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Fix compilation with --enable-gcc-warnings and -O1
+	optimization level.
+	* doprnt.c (doprnt): Change type of tem to int, initialize
+	to avoid compiler warning.  Add eassert.
+	* search.c (simple_search): Initialize match_byte to avoid
+	compiler warning.  Add eassert.
+
 2012-07-04  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Avoid weird behavior with large horizontal scrolls.
