--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-04  Juanma Barranquero  <lekktu@gmail.com>
+
+	* CPP-DEFINES (LISP_FLOAT_TYPE): Remove, obsolete.
+
 2012-06-26  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* coccinelle/build_string.cocci: Semantic patch
