--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-04  Juanma Barranquero	<lekktu@gmail.com>
+
+	* s/ms-w32.h (LISP_FLOAT_TYPE, HAVE_MEMCMP, HAVE_MEMCPY)
+	(HAVE_MEMMOVE, HAVE_MEMSET): Don't set, obsolete.
+
 2012-07-04  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* buffer.c (init_buffer_once): Fix initialization of
